tests/borrowck/valid/reinit_after_move.vit
space tests/borrowck/valid/reinit_after_move

proc make_box() -> Box {
  give Box { value: 1 };
}

form Box {
  value: int
}

proc main() -> Box {
  let value = make_box();
  let moved = value;
  set value = make_box();
  give value;
}
