tests/borrowck/invalid/return_ref_to_local.vit
space tests/borrowck/invalid/return_ref_to_local

proc make_box() -> Box {
  give Box { value: 1 };
}

form Box {
  value: int
}

proc main() -> &Box {
  let value = make_box();
  give &value;
}
